--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dapper | Saibalaji Kokate</title>
+    <title>Dapper</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -18,14 +18,14 @@
             More
             <span
               ><img
-                src="./assets/downarrow.png"
+                src="downarrow.png"
                 alt="down arrow"
                 class="down-arrow"
             /></span>
           </p>
           <div class="search-bar">
             <button class="search-btn">
-              <img src="./assets/search.png" alt="search button" width="80%" />
+              <img src="search.png" alt="search button" width="80%" />
             </button>
             <input
               type="text"
@@ -35,14 +35,14 @@
             />
           </div>
         </nav>
-        <img src="./assets/hamburger.png" alt="menu" height="50%" />
+        <img src="hamburger.png" alt="menu" height="50%" />
       </header>
       <div class="container">
         <main class="main-section">
           <div class="top-section">
             <div class="top-left">
               <!-- <img
-              src="./assets//code.png"
+              src="code.png"
               alt="code"
               class="code-image"
               width="100%"
@@ -103,7 +103,7 @@
               <button class="next-button">
                 <span>Next</span>
                 <img
-                  src="./assets//Arrow.png"
+                  src="Arrow.png"
                   alt="next arrow"
                   class="next-arrow"
                   width="18%"
@@ -114,7 +114,7 @@
         </main>
         <div class="help">
           <img
-            src="./assets/help.png"
+            src="help.png"
             alt="help icon"
             class="help-icon"
             width="72px"
@@ -125,7 +125,7 @@
           <div class="social-links">
             <div class="icon icon-1">
               <img
-                src="./assets/whatsapp-icon.png"
+                src="whatsapp-icon.png"
                 alt="whatsapp icon"
                 width="90%"
                 height="90%"
@@ -133,7 +133,7 @@
             </div>
             <div class="icon icon-2">
               <img
-                src="./assets/facebook-icon.png"
+                src="facebook-icon.png"
                 alt="facebook icon"
                 width="90%"
                 height="90%"
@@ -141,7 +141,7 @@
             </div>
             <div class="icon icon-3">
               <img
-                src="./assets/twitter-icon.png"
+                src="twitter-icon.png"
                 alt="twitter-icon"
                 width="90%"
                 height="90%"
